--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/header_image"
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
-                android:src="@drawable/ic_launcher_foreground"
+                android:src="@mipmap/ic_launcher_foreground"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -55,33 +55,44 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/subhead" />
-
-            <LinearLayout
-                android:id="@+id/LinearLayout02"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:layout_marginTop="4dp"
-                android:layout_alignParentBottom="true"
+            <Switch
+                android:id="@+id/switchButton"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/body"
-                >
-                <Button
-                    android:id="@+id/start_doomguard"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
-                    android:layout_weight="1" android:text="Start">
-                </Button>
-                <Button
-                    android:id="@+id/stop_doomguard"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_margin="4dp"
-                    android:text="Stop">
-                </Button>
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:text="DoomGuard"
+                android:checked="true"
+                android:layout_marginTop="10dp"
+                android:layout_centerHorizontal="true"/>
+
+<!--            <LinearLayout-->
+<!--                android:id="@+id/LinearLayout02"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_marginTop="4dp"-->
+<!--                android:layout_alignParentBottom="true"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/body"-->
+<!--                >-->
+<!--                <Button-->
+<!--                    android:id="@+id/start_doomguard"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_margin="4dp"-->
+<!--                    android:layout_weight="1" android:text="Start">-->
+<!--                </Button>-->
+<!--                <Button-->
+<!--                    android:id="@+id/stop_doomguard"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:layout_margin="4dp"-->
+<!--                    android:text="Stop">-->
+<!--                </Button>-->
+<!--            </LinearLayout>-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
