--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="default_chip_color">#00000000</color> <!-- Transparent color -->
+    <color name="selected_chip_color">#808000</color>
+
 </resources>
